[package]
name = "contract-deployer"
version = "0.1.0"
edition = "2024"
authors = ["David <0xdavid7@proton.me>"]
description = "Automated deployment tool for Foundry-based repositories"
repository = "https://github.com/0xdavid7/contract-deployer"
license = "MIT"
keywords = [
    "foundry",
    "ethereum",
    "deployment",
    "automation",
    "smart-contracts",
]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "contract-deployer"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
colored = "3.0.0"
# Other dependencies...
git2 = { version = "0.18", default-features = false, features = [
    "https",
    "vendored-openssl",
] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
toml = "0.9.0"

[dev-dependencies]
tempfile = "3.0"

[features]
default = ["vendored-openssl"]
vendored-openssl = ["git2/vendored-openssl"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
